kubernetes/puter/puter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: puter
  name: puter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: puter
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: puter
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Paris
          image: ghcr.io/heyputer/puter:latest
          name: puter
          ports:
            - containerPort: 4100
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/puter
              name: puter-claim0
            - mountPath: /var/puter
              name: puter-claim1
      restartPolicy: Always
      volumes:
        - name: puter-claim0
          persistentVolumeClaim:
            claimName: puter-claim0
        - name: puter-claim1
          persistentVolumeClaim:
            claimName: puter-claim1
