kubernetes/puter/puter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: puter
  name: puter
spec:
  ports:
    - name: "4100"
      port: 4100
      targetPort: 4100
  selector:
    io.kompose.service: puter
